<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="32dp">

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/inputCount"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/write_count" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addRndPosBtn"
        style="@style/strokeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_to_random_positions"
        app:layout_constraintTop_toBottomOf="@id/inputCount" />

    <Button
        android:id="@+id/removeRndPosBtn"
        style="@style/strokeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/remove_at_random_positions"
        app:layout_constraintTop_toBottomOf="@id/addRndPosBtn"/>

    <Button
        android:id="@+id/addBtn"
        style="@style/strokeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_to_random_position"
        app:layout_constraintTop_toBottomOf="@id/removeRndPosBtn"/>

    <Button
        android:id="@+id/removeBtn"
        style="@style/strokeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/remove_at_random_position"
        app:layout_constraintTop_toBottomOf="@id/addBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>